tests/snapshots/split_match__split_match_empty_after@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"foo:qux\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo:qux                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
