tests/snapshots/split_match__split_match_empty_after@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"foo:qux\"]\noptions: --split-match :\nafter:\n  @type \"foo:\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo:qux                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
"> foo:                                                                          "
cursor: (24, 7)
