tests/snapshots/split_match__split_match_empty_before-2.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz:bar                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
"> :bar                                                                          "
