tests/snapshots/split_match__split_match_empty_before@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:bar\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz:bar                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
