tests/snapshots/split_match__split_match_empty_before@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:bar\"]\noptions: --split-match :\nafter:\n  @type \":bar\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz:bar                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
"> :bar                                                                          "
cursor: (24, 7)
