tests/snapshots/split_match__split_match_multiple_delimiters_in_item-2.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a:bc:cd                                                                       "
"> a:b:c                                                                         "
"  2/3                                                                        0/0"
"> a:b:c                                                                         "
cursor: (7, 23)
