tests/snapshots/split_match__split_match_multiple_delimiters_in_item.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a:bc:cd                                                                       "
"  x:y:z                                                                         "
"> a:b:c                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (2, 23)
