tests/snapshots/split_match__split_match_multiple_delimiters_in_item@001.snap
---
source: tests/split_match.rs
description: "input: items [\"a:b:c\", \"x:y:z\", \"a:bc:cd\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a:bc:cd                                                                       "
"  x:y:z                                                                         "
"> a:b:c                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
