tests/snapshots/split_match__split_match_multiple_delimiters_in_item@002.snap
---
source: tests/split_match.rs
description: "input: items [\"a:b:c\", \"x:y:z\", \"a:bc:cd\"]\noptions: --split-match :\nafter:\n  @type \"a:b:c\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a:bc:cd                                                                       "
"> a:b:c                                                                         "
"  2/3                                                                        0/0"
"> a:b:c                                                                         "
cursor: (24, 8)
